--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,16 @@
 <head>
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-
+    <title>We stuyving pyving and thriving fr ong</title>
+    <br> I LOVE STUYPY COOL CAT <br> <img src="{{ url_for('static', filename='Octocat.png') }}" class="App-logo" alt="logo" />
 <body>
-    <div class="App">
-        <header class="App-header">
-            <img src="{{ url_for('static', filename='Octocat.png') }}" class="App-logo" alt="logo" />
-            <p>
-                GitHub Codespaces <span class="heart">♥️</span> Flask
-            </p>
-            <p class="small">
-                Edit <code>templates/index.html</code> and refresh to see your changes!
-            </p>
-        </header>
-    </div>
+    <br> biology worst subject I hope whoever invented biology losese every cell in their body <br> 
+    <br> whoa google <br> <iframe width="560" height="315" src="https://www.google.com"></iframe>
+    <br> <div class="tenor-gif-embed" data-postid="20627924" data-share-method="host" data-aspect-ratio="0.753125" data-width="100%"><a href="https://tenor.com/view/epic-embed-fail-ryan-gosling-cereal-embed-failure-laugh-at-this-user-gif-20627924">Epic Embed Fail Ryan Gosling GIF</a>from <a href="https://tenor.com/search/epic+embed+fail-gifs">Epic Embed Fail GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+    
+    <br> ok project time!!!!!!!!!!
+    <br> FAVORITE CLASS: ALGEBRA II
+    <br> FAVORITE FOOD: PIZZA PLACE THAT IS NOT LITTLE ITALY
+    <br> FAVORITE CAFETERIA: THE ONE ON FLOOR 5
+
 </body>
 
 </html>
